<resources>
    <item type="id" name="digicode_object"></item>

    <string name="app_name">Digipote</string>
    <string name="button_add">Ajouter un digicode</string>
    <string name="button_save">Enregistrer</string>
    <string name="button_cancel">Annuler</string>
    <string name="edit_name_hint">Prénom Nom</string>
    <string name="edit_code_hint">Code</string>
    <string name="edit_street_hint">Adresse</string>
    <string name="edit_zip_code_hint">Code postal</string>
    <string name="edit_city_hint">Ville</string>
    <string name="edit_country_hint">Pays</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_digicode">Ajouter un digicode</string>
    <string name="edit_digicode_title">Modifier le digicode</string>
    <string name="delete_digicode_confirm">Supprimer ce digicode ?</string>
    <string name="digicode_was_deleted">Digicode supprimé</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
</resources>
